Fix for #75 - missing translations

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -6,6 +6,9 @@
   "button.copy": "Copy",
   "button.delete": "Delete",
   "button.ok": "Ok",
+  "common.in-progress": "In progress",
+  "common.error": "Error",
+  "common.success": "Success",
   "car-activation.copied-to-clipboard": "copied to clipboard",
   "car-activation.description": "Create systems manager activation to register and update cars.",
   "car-activation.fleet": "Fleet",
@@ -43,6 +46,7 @@
   "carmodelupload.status": "Status",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload.we-cant-find-a-match": "We can't find a match",
+  "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "cars.agent-version": "Agent version",
   "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
