Translation fixes, delete dynamoDB tables when deleting the stack

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -31,10 +31,10 @@
   "carmodelupload.clear": "Clear car models first?",
   "carmodelupload.commandid": "CommandId",
   "carmodelupload.filter-cars": "Filter cars",
+  "carmodelupload.header": "Select a car",
   "carmodelupload.header-delete-confirm": "Are you sure you want to delete models on Cars(s)",
   "carmodelupload.header-delete-upload": "Delete and Upload",
   "carmodelupload.header-delete": "Delete models on cars",
-  "carmodelupload.header-select": "Select a car",
   "carmodelupload.header-upload": "Upload to car status",
   "carmodelupload.loading-cars": "Loading cars",
   "carmodelupload.loading": "Loading resources",
@@ -161,6 +161,7 @@
   "leaderboard.time": "TIME",
   "models.all-header": "Models",
   "models.breadcrumb": "Models",
+  "models.clear-filter": "Clear filter",
   "models.filter-models": "Filter models",
   "models.header": "Models",
   "models.list-of-all-uploaded-models": "List of all uploaded models.",
