--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -6,9 +6,6 @@
   "button.copy": "Copy",
   "button.delete": "Delete",
   "button.ok": "Ok",
-  "common.in-progress": "In progress",
-  "common.error": "Error",
-  "common.success": "Success",
   "car-activation.copied-to-clipboard": "copied to clipboard",
   "car-activation.description": "Create systems manager activation to register and update cars.",
   "car-activation.fleet": "Fleet",
@@ -27,15 +24,16 @@
   "car-activation.wifi-config": "Optional WiFi config for networks with hidden SSIDs",
   "car-activation.wifi-placeholder": "wifimagic",
   "car-activation.wifi": "WiFi Password",
+  "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.clear-filter": "Clear filter",
   "carmodelupload.clear": "Clear car models first?",
   "carmodelupload.commandid": "CommandId",
   "carmodelupload.filter-cars": "Filter cars",
-  "carmodelupload.header": "Select a car",
   "carmodelupload.header-delete-confirm": "Are you sure you want to delete models on Cars(s)",
   "carmodelupload.header-delete-upload": "Delete and Upload",
   "carmodelupload.header-delete": "Delete models on cars",
   "carmodelupload.header-upload": "Upload to car status",
+  "carmodelupload.header": "Select a car",
   "carmodelupload.loading-cars": "Loading cars",
   "carmodelupload.loading": "Loading resources",
   "carmodelupload.modelname": "ModelName",
@@ -46,7 +44,6 @@
   "carmodelupload.status": "Status",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload.we-cant-find-a-match": "We can't find a match",
-  "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "cars.agent-version": "Agent version",
   "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
@@ -66,6 +63,9 @@
   "cars.online": "Online",
   "cars.page-size-label": "cars",
   "cars.registration-date": "Registration date",
+  "common.error": "Error",
+  "common.in-progress": "In progress",
+  "common.success": "Success",
   "event-provider.please-select-an-event": "Please Select an Event",
   "events.add-event": "Add Event",
   "events.breadcrumb": "Events",
@@ -94,6 +94,12 @@
   "fleets.delete-fleet": "Delete fleet",
   "fleets.delete-warning": "Are you sure you want to delete fleet(s)",
   "fleets.description": "List of fleets.",
+  "fleets.edit-cars.delete-models": "Delete models",
+  "fleets.edit-cars.edit-cars": "Edit cars",
+  "fleets.edit-cars.select-color": "Select colour",
+  "fleets.edit-cars.select-fleet": "Select fleet",
+  "fleets.edit-cars.update-fleets": "Update fleets",
+  "fleets.edit-cars.update-tail-lights": "Update tail lights",
   "fleets.error-exists": "Fleet already exists",
   "fleets.error-text-regex": "Must match regex: ^[a-zA-Z0-9-_]+$",
   "fleets.filter-cars": "Filter cars",
