--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -95,6 +95,8 @@
   "fleets.delete-warning": "Are you sure you want to delete fleet(s)",
   "fleets.description": "List of fleets.",
   "fleets.edit-cars.delete-models": "Delete models",
+  "fleets.edit-cars.delete-models-header": "Delete models on cars",
+  "fleets.edit-cars.delete-models-message": "Are you sure you want to delete models on Cars(s)",
   "fleets.edit-cars.edit-cars": "Edit cars",
   "fleets.edit-cars.select-color": "Select colour",
   "fleets.edit-cars.select-fleet": "Select fleet",
