Dynamic styles for leaderboard position

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -37,11 +37,11 @@
   "carmodelupload.clear": "Clear car models first?",
   "carmodelupload.commandid": "CommandId",
   "carmodelupload.filter-cars": "Filter cars",
-  "carmodelupload.header": "Select a car",
   "carmodelupload.header-delete-confirm": "Are you sure you want to delete models on Cars(s)",
   "carmodelupload.header-delete-upload": "Delete and Upload",
   "carmodelupload.header-delete": "Delete models on cars",
   "carmodelupload.header-upload": "Upload to car status",
+  "carmodelupload.header": "Select a car",
   "carmodelupload.loading-cars": "Loading cars",
   "carmodelupload.loading": "Loading resources",
   "carmodelupload.modelname": "ModelName",
@@ -52,6 +52,7 @@
   "carmodelupload.status": "Status",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload.we-cant-find-a-match": "We can't find a match",
+
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
 
   "cars.agent-version": "Agent version",
@@ -113,6 +114,14 @@
   "fleets.delete-fleet": "Delete fleet",
   "fleets.delete-warning": "Are you sure you want to delete fleet(s)",
   "fleets.description": "List of fleets.",
+  "fleets.edit-cars.delete-models": "Delete models",
+  "fleets.edit-cars.delete-models-header": "Delete models on cars",
+  "fleets.edit-cars.delete-models-message": "Are you sure you want to delete models on Cars(s)",
+  "fleets.edit-cars.edit-cars": "Edit cars",
+  "fleets.edit-cars.select-color": "Select colour",
+  "fleets.edit-cars.select-fleet": "Select fleet",
+  "fleets.edit-cars.update-fleets": "Update fleets",
+  "fleets.edit-cars.update-tail-lights": "Update tail lights",
   "fleets.error-exists": "Fleet already exists",
   "fleets.error-text-regex": "Must match regex: ^[a-zA-Z0-9-_]+$",
   "fleets.fleet-information": "Fleet information",
