--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -14,6 +14,7 @@
   "common.error": "Error",
   "common.success": "Success",
 
+  "car-activation.breadcrumb": "Car activation",
   "car-activation.copied-to-clipboard": "copied to clipboard",
   "car-activation.description": "Create systems manager activation to register and update cars.",
   "car-activation.fleet": "Fleet",
