--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -115,7 +115,8 @@
   "events.race.resets-per-lap-description": "Defines how many times the car may go of track during a lap before the lap is disqualified.",
   "events.race.unlimited": "Unlimited",
   "events.race.laps-to-finish": "Number of laps to finish",
-  "events.race.laps-to-finish-description": "Defines how many laps the car shall finish before the race is over.",  "events.race.ranking.best-lap-time": "Best lap time",
+  "events.race.laps-to-finish-description": "Defines how many laps the car shall finish before the race is over.",
+  "events.race.ranking.best-lap-time": "Best lap time",
   "events.race.ranking.average-lap-time": "Average lap time",
   "events.race.ranking.finish-x-laps": "Finish x laps",
 
@@ -189,6 +190,19 @@
   "groups.no-users-have-been-defined": "No users have been defined.",
   "groups.no-users": "No users",
   "groups.page-size-label": "groups",
+
+  "users.breadcrumb": "Create User",
+  "users.description": "User creation",
+  "users.header": "Create User",
+  "users.header-list": "Users List",
+  "users.header-username": "Username",
+  "users.header-creation-date": "Creation date",
+  "users.header-last-modified-date": "Last modified date",
+  "users.no-users": "No users",
+  "users.no-users-have-been-defined": "No users have been defined.",
+  "users.filter-groups": "Filter users",
+  "users.loading-groups": "Loading users",
+  "users.page-size-label": "users",
 
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
@@ -302,7 +316,6 @@
   "timekeeper.time-left": "Time Left",
   "timekeeper.undo-false-finish": "Undo false finish",
 
-
   "topnav.admin": "Admin",
   "topnav.all-models": "All Models",
   "topnav.all": "All",
@@ -315,6 +328,7 @@
   "topnav.event": "Event",
   "topnav.events": "Events",
   "topnav.fleets": "Fleets",
+  "topnav.create-user": "Create User",
   "topnav.groups": "Groups",
   "topnav.leaderboard": "Leaderboard",
   "topnav.models": "Models",
