--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -203,6 +203,11 @@
   "users.filter-groups": "Filter users",
   "users.loading-groups": "Loading users",
   "users.page-size-label": "users",
+  "users.racer-name": "Username",
+  "users.racer-name-placeholder": "Username",
+  "users.email": "Email",
+  "users.email-placeholder": "Email",
+  "users.create-user": "Create user",
 
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
