Added receptionist assisted Create User page

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -192,6 +192,24 @@
   "groups.no-users": "No users",
   "groups.page-size-label": "groups",
 
+  "users.breadcrumb": "Create User",
+  "users.description": "User creation",
+  "users.header": "Create User",
+  "users.header-list": "Users List",
+  "users.header-username": "Username",
+  "users.header-creation-date": "Creation date",
+  "users.header-last-modified-date": "Last modified date",
+  "users.no-users": "No users",
+  "users.no-users-have-been-defined": "No users have been defined.",
+  "users.filter-groups": "Filter users",
+  "users.loading-groups": "Loading users",
+  "users.page-size-label": "users",
+  "users.racer-name": "Username",
+  "users.racer-name-placeholder": "Username",
+  "users.email": "Email",
+  "users.email-placeholder": "Email",
+  "users.create-user": "Create user",
+
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
   "home.breadcrumb": "Home",
@@ -304,7 +322,6 @@
   "timekeeper.time-left": "Time Left",
   "timekeeper.undo-false-finish": "Undo false finish",
 
-
   "topnav.admin": "Admin",
   "topnav.all-models": "All Models",
   "topnav.all": "All",
@@ -317,6 +334,7 @@
   "topnav.event": "Event",
   "topnav.events": "Events",
   "topnav.fleets": "Fleets",
+  "topnav.create-user": "Create User",
   "topnav.groups": "Groups",
   "topnav.leaderboard": "Leaderboard",
   "topnav.models": "Models",
