--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -108,6 +108,21 @@
   "events.no-events": "No Events",
   "events.create-an-event": "Please create an event.",
 
+  "events.event-type": "Type of Event",
+  "events.event-type-description": "",
+  "events.type.private-workshop": "Private workshop",
+  "events.type.offical-workshop": "Public workshop",
+  "events.type.private-track-race": "Private track race",
+  "events.type.official-track-race": "Public track race",
+  "events.type.other": "Other",
+
+  "events.leaderboard.header": "Header text",
+  "events.leaderboard.header-description": "Text displayed on top of the leaderboard",
+  "events.leaderboard.footer": "Footer text",
+  "events.leaderboard.footer-description": "Text displayed at the bottom of the leaderboard",
+  "events.leaderboard.sponsor": "Sponsor",
+  "events.leaderboard.sponsor-description": "Event sponsor",
+
   "events.race.ranking-method": "Ranking method",
   "events.race.ranking-method-description": "Define how the racers shall be ranked in the leaderboard",
   "events.race.race-time": "Race time (min)",
@@ -127,6 +142,7 @@
   "events.tracks.reinvent-2018": "re:Invent 2018",
   "events.tracks.reinvent-2019": "re:Invent 2019",
   "events.tracks.reinvent-2022": "2022 Summit speedway",
+  "events.tracks.other": "Other",
   "events.tracks.choose": "Choose track",
   "events.tracks.choose-description": "What track will be used when hosting the event",
 
@@ -298,9 +314,9 @@
   "timekeeper.end-session.submitting-race": "Submitting race",
   "timekeeper.end-session.warning": "Warning, race has been deleted",
   "timekeeper.fastest-lap": "Fastest Lap",
-  "timekeeper.lap-table.actions": "Actions",
-  "timekeeper.lap-table.lap-number": "Lap number",
-  "timekeeper.lap-table.lap-time": "Lap time",
+  "timekeeper.lap-table.valid": "Valid",
+  "timekeeper.lap-table.lap-number": "Lap",
+  "timekeeper.lap-table.lap-time": "Time",
   "timekeeper.lap-table.loading-resources": "Loading resources",
   "timekeeper.lap-table.resets": "Resets",
   "timekeeper.pause-race": "Pause race",
