Race manager + timekeeper bug fixes

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -146,6 +146,29 @@
   "events.tracks.choose": "Choose track",
   "events.tracks.choose-description": "What track will be used when hosting the event",
 
+  "race-admin.header": "Race Management",
+  "race-admin.description": "",
+  "race-admin.breadcrumb": "Race",
+  "race-admin.races-table-header": "Races",
+  "race-admin.created-at": "Created At",
+  "race-admin.information": "Race information",
+  "race-admin.race-id": "Race Id",
+  "race-admin.track-id": "Track",
+  "race-admin.username": "User name",
+  "race-admin.user-id": "User Id",
+  "race-admin.number-of-laps": "Laps",
+  "race-admin.raced-by-proxy": "Raced by proxy",
+  "race-admin.no-races": "No races found",
+  "race-admin.lap-id": "Lap Id",
+  "race-admin.time": "Time",
+  "race-admin.resets": "Resets",
+  "race-admin.is-valid": "Is Valid",
+  "race-admin.aut-timer-connected": "Aut timer connected",
+  "race-admin.edit-race": "Edit Race",
+  "race-admin.delete-laps": "Delete lap",
+  "race-admin.delete-warning": "Are you sure you want to delete these lap(s)?",
+  "race-admin.laps-table-header": "Laps",
+
   "fleets.create-fleet": "Create Fleet",
   "fleets.edit-fleet": "Edit Fleet",
   "fleets.breadcrumb": "Fleets",
@@ -357,7 +380,7 @@
   "topnav.fleets": "Fleets",
   "topnav.create-user": "Create User",
   "topnav.groups": "Groups",
-  "topnav.leaderboard": "Leaderboard",
+  "topnav.race-admin": "Manage Race",
   "topnav.models": "Models",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
