--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -261,6 +261,7 @@
   "users.terms-and-conditions": "Terms and Conditions",
   "users.terms-and-conditions-error": "Please agree to the terms and conditions",
   "users.terms-and-conditions-title": "Agreement",
+  "users.country": "Country",
 
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
