--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -8,6 +8,7 @@
   "button.delete": "Delete",
   "button.edit": "Edit",
   "button.create": "Create",
+  "button.next": "Next",
   "button.ok": "Ok",
 
   "common.in-progress": "In progress",
@@ -365,6 +366,7 @@
   "timekeeper.racer-selector.loading": "loading",
   "timekeeper.racer-selector.select-event": "Select event",
   "timekeeper.racer-selector.select-racer": "Select racer",
+  "timekeeper.racer-selector.select-track": "Track",
   "timekeeper.racer-selector.select-car": "Select car from event car fleet",
   "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
   "timekeeper.racer-selector.select-model": "Select model",
