--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -262,6 +262,8 @@
   "users.terms-and-conditions-error": "Please agree to the terms and conditions",
   "users.terms-and-conditions-title": "Agreement",
   "users.country": "Country",
+  "users.country-code": "Country",
+  "users.flag": "Flag",
 
   "home.all-models-description": "List of the models uploaded by users",
   "home.all-models": "All models",
