--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -419,7 +419,8 @@
   "commentator.race.actualRacerStats": "Stats for the actual Racer",
   "commentator.race.racerName": "Racer Name",
   "commentator.race.racerFastestLap": "Fastest Time so far",
-  "commentator.race.overallFastestLaps": "Fastest Laps:",
+  "commentator.race.racerSlowestLap": "Slowest Time so far",
+  "commentator.race.overallFastestLaps": "Fastest Racer:",
   "commentator.race.loading": "Loading resources",
-  "commentator.race.overallSlowestLaps": "Slowest Laps:"
+  "commentator.race.overallSlowestLaps": "Slowest Racer:"
 }
