--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -116,7 +116,11 @@
   "events.no-events": "No Events",
   "events.create-an-event": "Please create an event.",
   "events.leaderboard-link": "Leaderboard",
+  "events.leaderboard-link-same-tab": "Open in this tab",
+  "events.leaderboard-link-new-tab": "Open in new tab",
   "events.streaming-overlay-link": "Streaming Overlay",
+  "events.streaming-overlay-link-same-tab": "Open in this tab",
+  "events.streaming-overlay-link-new-tab": "Open in new tab",
 
   "events.event-type": "Type of Event",
   "events.event-type-description": "",
