Updated lambda, layer, leaderboard, event, etc...

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -300,6 +300,7 @@
   "leaderboard.position": "POSITION",
   "leaderboard.racer": "RACER",
   "leaderboard.time": "TIME",
+  "leaderboard.flag": "FLAG",
 
   "models.all-header": "Models",
   "models.breadcrumb": "Models",
