Delete user and change password

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -437,6 +437,7 @@
   "topnav.time-keeper": "Time keeper",
   "topnav.upload": "Upload",
   "topnav.commentator": "Commentator",
+  "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race",
 
   "upload.breadcrumb": "Upload models",
@@ -457,9 +458,35 @@
   "commentator.race.racerSlowestLap": "Slowest Time so far",
   "commentator.race.overallFastestLaps": "Fastest Racer:",
   "commentator.race.loading": "Loading resources",
+  "commentator.race.overallSlowestLaps": "Slowest Laps:",
   "commentator.race.overallSlowestLaps": "Slowest Racer:",
   "commentator.race.currentLapTime": "Current Lap Time",
   "commentator.race.timeLeft": "Time Left",
   "commentator.race.lapCount": "Laps",
-  "commentator.race.invalidLapCount": "Not valid Laps"
+  "commentator.race.invalidLapCount": "Not valid Laps",
+
+  "user-profile.header": "User Settings",
+  "user-profile.header.details": "Account Details",
+  "user-profile.description" : "Update your user settings",
+  "user-profile.settings.header" : "Your account details",
+  "user-profile.settings.name" : "Name",
+  "user-profile.breadcrumb" : "User",
+  "user-profile.settings.breadcrumb" : "Settings",
+  "user-profile.buttons.delete": "Delete Account",
+  "user-profile.modal.button.delete-confirm": "Confirm",
+  "user-profile.modal.header-delete-account": "Delete DREM Account",
+  "user-profile.modal.confirm-delete-account":"Are you sure you wish to delete your DREM account, this action is not reversible?",
+  "user-profile.settings.delete.header" : "Delete your DREM account",
+  "user-profile.settings.changepw.header" : "Please complete the form to update your password",
+  "user-profile.buttons.update-password" : "Change Password",
+  "user-profile.settings.form.label.current_pw": "Current Password",
+  "user-profile.settings.form.label.current_pw.ph": "Enter your password",
+  "user-profile.settings.form.label.new_pw": "New Password",
+  "user-profile.settings.form.label.new_pw.ph": "Enter your new password",
+  "user-profile.settings.form.label.new_pw_conf": "New Password Confirm",
+  "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
+  "user-profile.settings.form.pw_changed": "Password Successfully Changed",
+  "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
+  "user-profile.settings.form.pw.error" : "New passwords do not match."
+
 }
