Putting user registration into it's own area on the nav / Adding some colours into the timer

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -251,9 +251,9 @@
   "groups.no-users": "No users",
   "groups.page-size-label": "groups",
 
-  "users.breadcrumb": "Create User",
+  "users.breadcrumb": "Create user",
   "users.description": "User creation",
-  "users.header": "Create User",
+  "users.header": "Create user",
   "users.header-list": "Users List",
   "users.header-username": "Username",
   "users.header-creation-date": "Creation date",
@@ -415,7 +415,7 @@
   "timekeeper.undo-false-finish": "Undo false finish",
 
   "topnav.admin": "Admin",
-  "topnav.all-models": "All Models",
+  "topnav.all-models": "All models",
   "topnav.all": "All",
   "topnav.back": "Back",
   "topnav.car-activation": "Car activation",
@@ -426,9 +426,9 @@
   "topnav.event": "Event",
   "topnav.events": "Events",
   "topnav.fleets": "Fleets",
-  "topnav.create-user": "Create User",
+  "topnav.create-user": "Create user",
   "topnav.groups": "Groups",
-  "topnav.race-admin": "Manage Race",
+  "topnav.race-admin": "Manage race",
   "topnav.models": "Models",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
@@ -439,6 +439,7 @@
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race",
+  "topnav.reception": "Registration desk",
 
   "upload.breadcrumb": "Upload models",
   "upload.chose-file": "Choose model file(s)",
