--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -439,7 +439,8 @@
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race",
-  "topnav.reception": "Registration desk",
+  "topnav.reception": "Registration",
+  "topnav.users": "Users",
 
   "upload.breadcrumb": "Upload models",
   "upload.chose-file": "Choose model file(s)",
@@ -468,18 +469,18 @@
 
   "user-profile.header": "User Settings",
   "user-profile.header.details": "Account Details",
-  "user-profile.description" : "Update your user settings",
-  "user-profile.settings.header" : "Your account details",
-  "user-profile.settings.name" : "Name",
-  "user-profile.breadcrumb" : "User",
-  "user-profile.settings.breadcrumb" : "Settings",
+  "user-profile.description": "Update your user settings",
+  "user-profile.settings.header": "Your account details",
+  "user-profile.settings.name": "Name",
+  "user-profile.breadcrumb": "User",
+  "user-profile.settings.breadcrumb": "Settings",
   "user-profile.buttons.delete": "Delete Account",
   "user-profile.modal.button.delete-confirm": "Confirm",
   "user-profile.modal.header-delete-account": "Delete DREM Account",
-  "user-profile.modal.confirm-delete-account":"Are you sure you wish to delete your DREM account, this action is not reversible?",
-  "user-profile.settings.delete.header" : "Delete your DREM account",
-  "user-profile.settings.changepw.header" : "Please complete the form to update your password",
-  "user-profile.buttons.update-password" : "Change Password",
+  "user-profile.modal.confirm-delete-account": "Are you sure you wish to delete your DREM account, this action is not reversible?",
+  "user-profile.settings.delete.header": "Delete your DREM account",
+  "user-profile.settings.changepw.header": "Please complete the form to update your password",
+  "user-profile.buttons.update-password": "Change Password",
   "user-profile.settings.form.label.current_pw": "Current Password",
   "user-profile.settings.form.label.current_pw.ph": "Enter your password",
   "user-profile.settings.form.label.new_pw": "New Password",
@@ -488,6 +489,5 @@
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
   "user-profile.settings.form.pw_changed": "Password Successfully Changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
-  "user-profile.settings.form.pw.error" : "New passwords do not match."
-
+  "user-profile.settings.form.pw.error": "New passwords do not match."
 }
