--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -138,6 +138,11 @@
   "events.leaderboard.footer-description": "Text displayed at the bottom of the leaderboard",
   "events.leaderboard.sponsor": "Sponsor",
   "events.leaderboard.sponsor-description": "Event sponsor",
+  "events.leaderboard.qr-code-header": "QR code",
+  "events.leaderboard.qr-code-description": "Display QR code on the leaderboard?",
+  "events.leaderboard.qr-code-visible": "Visible",
+  "events.leaderboard.qr-code-hidden": "Hidden",
+  "events.leaderboard.validation-error-message": "Not allowed to be empty",
 
   "events.race.ranking-method": "Ranking method",
   "events.race.ranking-method-description": "Define how the racers shall be ranked in the leaderboard",
@@ -468,18 +473,18 @@
 
   "user-profile.header": "User Settings",
   "user-profile.header.details": "Account Details",
-  "user-profile.description" : "Update your user settings",
-  "user-profile.settings.header" : "Your account details",
-  "user-profile.settings.name" : "Name",
-  "user-profile.breadcrumb" : "User",
-  "user-profile.settings.breadcrumb" : "Settings",
+  "user-profile.description": "Update your user settings",
+  "user-profile.settings.header": "Your account details",
+  "user-profile.settings.name": "Name",
+  "user-profile.breadcrumb": "User",
+  "user-profile.settings.breadcrumb": "Settings",
   "user-profile.buttons.delete": "Delete Account",
   "user-profile.modal.button.delete-confirm": "Confirm",
   "user-profile.modal.header-delete-account": "Delete DREM Account",
-  "user-profile.modal.confirm-delete-account":"Are you sure you wish to delete your DREM account, this action is not reversible?",
-  "user-profile.settings.delete.header" : "Delete your DREM account",
-  "user-profile.settings.changepw.header" : "Please complete the form to update your password",
-  "user-profile.buttons.update-password" : "Change Password",
+  "user-profile.modal.confirm-delete-account": "Are you sure you wish to delete your DREM account, this action is not reversible?",
+  "user-profile.settings.delete.header": "Delete your DREM account",
+  "user-profile.settings.changepw.header": "Please complete the form to update your password",
+  "user-profile.buttons.update-password": "Change Password",
   "user-profile.settings.form.label.current_pw": "Current Password",
   "user-profile.settings.form.label.current_pw.ph": "Enter your password",
   "user-profile.settings.form.label.new_pw": "New Password",
@@ -488,6 +493,5 @@
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
   "user-profile.settings.form.pw_changed": "Password Successfully Changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
-  "user-profile.settings.form.pw.error" : "New passwords do not match."
-
+  "user-profile.settings.form.pw.error": "New passwords do not match."
 }
