--- a/website-leaderboard/public/locales/se/translation.json
+++ b/website-leaderboard/public/locales/se/translation.json
@@ -1,5 +1,6 @@
 {
   "leaderboard.position": "Position",
   "leaderboard.racer": "Tävlande",
-  "leaderboard.time": "Tid"
+  "leaderboard.time": "Tid",
+  "leaderboard.flag": ""
 }
