Created by for fleets and events

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -93,6 +93,7 @@
   "events.description": "An event is a physical DeepRacer competition",
   "events.breadcrumb": "Events",
   "events.created-at": "Created at",
+  "events.created-by": "Created by",
   "events.delete-event": "Delete Event",
   "events.delete-warning": "Are you sure you want to delete these event(s)?",
   "events.event-id": "Event ID",
@@ -194,6 +195,7 @@
   "fleets.edit-fleet": "Edit Fleet",
   "fleets.breadcrumb": "Fleets",
   "fleets.created-at": "Created at",
+  "fleets.created-by": "Created by",
   "fleets.delete-fleet": "Delete fleet",
   "fleets.delete-warning": "Are you sure you want to delete fleet(s)",
   "fleets.description": "List of fleets.",
