broke up side nav items and routes per group to ensure that a user can´t follow a deeplink

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -446,7 +446,7 @@
   "topnav.cars": "Cars",
   "topnav.close-menu": "Close menu",
   "topnav.close-search": "Close search",
-  "topnav.event": "Event",
+  "topnav.event": "Event management",
   "topnav.events": "Events",
   "topnav.fleets": "Fleets",
   "topnav.create-user": "Create user",
