--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -449,7 +449,7 @@
   "topnav.cars": "Cars",
   "topnav.close-menu": "Close menu",
   "topnav.close-search": "Close search",
-  "topnav.event": "Event",
+  "topnav.event": "Event management",
   "topnav.events": "Events",
   "topnav.fleets": "Fleets",
   "topnav.create-user": "Create user",
@@ -465,8 +465,9 @@
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race",
-  "topnav.reception": "Registration",
+  "topnav.registration": "Registration",
   "topnav.users": "Users",
+  "topnav.operator": "Operator",
 
   "upload.breadcrumb": "Upload models",
   "upload.chose-file": "Choose model file(s)",
