added aditional statistics for resets and changed layout

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -478,10 +478,10 @@
   "upload.label": "Upload model",
 
   "commentator.race.header": "Race",
-  "commentator.race.stats": "Statistics about the Race and actual Racer",
+  "commentator.race.stats": "Statistics about the Race and current Racer",
   "commentator.breadcrumb": "Commentator",
   "commentator.race.breadcrumb": "Race",
-  "commentator.race.actualRacerStats": "Stats for the actual Racer",
+  "commentator.race.actualRacerStats": "Stats for the current Racer",
   "commentator.race.racerName": "Racer Name",
   "commentator.race.racerFastestLap": "Fastest Time so far",
   "commentator.race.racerSlowestLap": "Slowest Time so far",
@@ -490,8 +490,15 @@
   "commentator.race.overallSlowestLaps": "Slowest Racer:",
   "commentator.race.currentLapTime": "Current Lap Time",
   "commentator.race.timeLeft": "Time Left",
-  "commentator.race.lapCount": "Laps",
+  "commentator.race.lapCount": "# of Laps ",
   "commentator.race.invalidLapCount": "Not valid Laps",
+  "commentator.race.historicalRacerStats": "Stats from previous runs during this event",
+  "commentator.race.historicalRacerStats.header1": "Data from previous",
+  "commentator.race.historicalRacerStats.header2": "runs",
+  "commentator.race.averagelapCount": "Average Laps per Run",
+  "commentator.race.restSum": "# of Resets",
+  "commentator.race.averageResetsPerLap": "Average Resets per Lap",
+
 
   "user-profile.header": "User Settings",
   "user-profile.header.details": "Account Details",
