--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -236,7 +236,7 @@
   "fleets.edit-cars.taillight-label": "Tail Light",
   "fleets.edit-cars.update-tail-lights": "Update tail lights",
   "fleets.edit-cars.title": "Car Control",
-  "fleets.edit-cars.restart-ros": "restart ROS Service",
+  "fleets.edit-cars.restart-ros": "Restart ROS Service",
   "fleets.edit-cars.stop": "Emergency Stop",
   "fleets.error-exists": "Fleet already exists",
   "fleets.error-text-regex": "Must match regex: ^[a-zA-Z0-9-_]+$",
