--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -47,8 +47,8 @@
   "car-activation.wifi-placeholder": "wifimagic",
   "car-activation.wifi": "WiFi Password",
 
-  "label-printer.printable-label-header": "Printable Label",
-  "label-printer.printable-label-alt-text": "Printable Label",
+  "label-printer.printable-label-header": "Printable label",
+  "label-printer.printable-label-alt-text": "Printable label",
   "label-printer.printable-label-copy-button": "Copy label URL",
   "label-printer.download-printable-label": "Download printable label",
   "label-printer.download-printable-labels": "Download printable labels",
@@ -58,7 +58,7 @@
   "carmodelupload.commandid": "CommandId",
   "carmodelupload.filter-cars": "Filter cars",
   "carmodelupload.header-delete-confirm": "Are you sure you want to delete models on Cars(s)",
-  "carmodelupload.header-delete-upload": "Delete and Upload",
+  "carmodelupload.header-delete-upload": "Delete and upload",
   "carmodelupload.header-delete": "Delete models on cars",
   "carmodelupload.header-upload": "Upload to car status",
   "carmodelupload.header": "Select a car",
@@ -96,14 +96,14 @@
   "cars.registration-date": "Registration date",
 
   "events.events-information": "Event information",
-  "event-provider.please-select-an-event": "Please Select an Event",
-  "events.create-event": "Create Event",
-  "events.edit-event": "Edit Event",
+  "event-provider.please-select-an-event": "Please select an event",
+  "events.create-event": "Create event",
+  "events.edit-event": "Edit event",
   "events.description": "An event is a physical DeepRacer competition",
   "events.breadcrumb": "Events",
   "events.created-at": "Created at",
   "events.created-by": "Created by",
-  "events.delete-event": "Delete Event",
+  "events.delete-event": "Delete event",
   "events.delete-warning": "Are you sure you want to delete these event(s)?",
   "events.event-id": "Event ID",
   "events.event-name": "Event name",
@@ -119,7 +119,7 @@
   "events.event-date-placeholder": "YYYY/MM/DD",
   "events.events-table": "Events",
   "events.filter": "Filter cars",
-  "events.car-fleet": "Car Fleet",
+  "events.car-fleet": "Car fleet",
   "events.track-type": "Track",
   "events.country": "Country",
   "events.country-description": "Where will the event be hosted",
@@ -188,7 +188,7 @@
   "events.split-panel.empty": "Select an event to see its details",
   "events.split-panel-header": "events selected",
 
-  "race-admin.header": "Race Management",
+  "race-admin.header": "Race management",
   "race-admin.description": "",
   "race-admin.breadcrumb": "Race",
   "race-admin.races-table-header": "Races",
@@ -221,8 +221,8 @@
   "race-admin.multi-select.sloweest-lap-time": "Slowest lap time",
   "race-admin.multi-select.header": "races selected",
 
-  "fleets.create-fleet": "Create Fleet",
-  "fleets.edit-fleet": "Edit Fleet",
+  "fleets.create-fleet": "Create fleet",
+  "fleets.edit-fleet": "Edit fleet",
   "fleets.breadcrumb": "Fleets",
   "fleets.created-at": "Created at",
   "fleets.created-by": "Created by",
@@ -231,7 +231,7 @@
   "fleets.description": "List of fleets.",
   "fleets.edit-cars.delete-models": "Delete models",
   "fleets.edit-cars.delete-models-header": "Delete models on cars",
-  "fleets.edit-cars.delete-models-message": "Are you sure you want to delete models on Cars(s)",
+  "fleets.edit-cars.delete-models-message": "Are you sure you want to delete models on cars(s)",
   "fleets.edit-cars.edit-cars": "Edit cars",
   "fleets.edit-cars.select-color": "Select colour",
   "fleets.edit-cars.select-fleet": "Select fleet",
@@ -354,8 +354,8 @@
   "models.user-name": "User name",
   "models.we-cant-find-a-match": "We can't find a match",
 
-  "quarantine.breadcrumb": "Quarantined Models",
-  "quarantine.header": "Quarantined Models",
+  "quarantine.breadcrumb": "Quarantined models",
+  "quarantine.header": "Quarantined models",
   "quarantine.list-of-all-models": "List of all quarantined models.",
   "quarantine.no-models-to-display": "No quarantined models to display.",
 
@@ -384,15 +384,15 @@
   "timekeeper.automated-timer-not-connected": "Automated timer not connected",
   "timekeeper.capture-lap": "Capture lap",
   "timekeeper.car-reset": "Car reset",
-  "timekeeper.current-lap": "Current Lap",
+  "timekeeper.current-lap": "Current lap",
   "timekeeper.current-racer": "Racer",
   "timekeeper.dnf": "Did not finish",
   "timekeeper.end-race": "End race",
 
-  "timekeeper.race-setup-page.page-header": "Race Setup",
+  "timekeeper.race-setup-page.page-header": "Race setup",
   "timekeeper.race-setup-page.page-description": "Configure the race",
 
-  "timekeeper.race-page.page-header": "Time Keeper",
+  "timekeeper.race-page.page-header": "Time keeper",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
   "timekeeper.race-page.warning-modal.header": "Warning!",
   "timekeeper.race-page.race-format-header": "Race format",
@@ -401,25 +401,25 @@
   "timekeeper.race-page.automated-timer-not-connected": "Not connected",
   "timekeeper.race-page.resume-race": "Resume race",
 
-  "timekeeper.end-session.discard-race": "Discard Race",
-  "timekeeper.end-session.race-discarded": "Race Discarded!",
+  "timekeeper.end-session.discard-race": "Discard race",
+  "timekeeper.end-session.race-discarded": "Race discarded!",
   "timekeeper.end-session.error": "Could not submit race. Please try again!",
-  "timekeeper.end-session.header": "Discard or Submit Race?",
+  "timekeeper.end-session.header": "Discard or submit race?",
   "timekeeper.end-session.info": "Race submitted",
-  "timekeeper.end-session.submit-race": "Submit Race",
+  "timekeeper.end-session.submit-race": "Submit race",
   "timekeeper.end-session.submitting-race": "Submitting race...",
   "timekeeper.end-session.warning": "Warning, race has been deleted",
-  "timekeeper.end-session.race-info": "Race Info",
+  "timekeeper.end-session.race-info": "Race info",
   "timekeeper.end-session.customer": "Customer",
-  "timekeeper.end-session.raced-by-proxy": "Raced By Proxy",
+  "timekeeper.end-session.raced-by-proxy": "Raced by proxy",
   "timekeeper.end-session.laps-panel-header": "Laps",
   "timekeeper.end-session.warning-message": "Discarding the race will delete the race without saving it!",
-  "timekeeper.end-session.page-header": "Review Race",
+  "timekeeper.end-session.page-header": "Review race",
   "timekeeper.end-session.page-description": "Verify that all laps and racer details are accurate before submitting the race.",
 
-  "timekeeper.fastest-lap": "Fastest Lap",
+  "timekeeper.fastest-lap": "Fastest lap",
   "timekeeper.lap-table.valid": "Valid",
-  "timekeeper.lap-table.not-valid": "Not Valid",
+  "timekeeper.lap-table.not-valid": "Not valid",
   "timekeeper.lap-table.lap-number": "Lap",
   "timekeeper.lap-table.lap-time": "Time",
   "timekeeper.lap-table.loading-resources": "Loading resources",
@@ -438,8 +438,8 @@
   "timekeeper.racer-selector.select-model": "Select model",
   "timekeeper.racer-selector.select-model-empty": "The user has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
-  "timekeeper.racer-selector.racer-section-header": "Racer Selection",
-  "timekeeper.racer-selector.event-section-header": "Event & Track Selection",
+  "timekeeper.racer-selector.racer-section-header": "Racer selection",
+  "timekeeper.racer-selector.event-section-header": "Event & track selection",
   "timekeeper.recorded-laps": "Recorded Laps",
   "timekeeper.resets": "Resets",
   "timekeeper.start-race": "Start race",
@@ -484,48 +484,48 @@
   "upload.label": "Upload model",
 
   "commentator.race.header": "Race",
-  "commentator.race.stats": "Statistics about the Race and current Racer",
+  "commentator.race.stats": "Statistics about the race and current racer",
   "commentator.breadcrumb": "Commentator",
   "commentator.race.breadcrumb": "Race",
-  "commentator.race.actualRacerStats": "Stats for the current Racer",
+  "commentator.race.actualRacerStats": "Stats for the current racer",
   "commentator.race.racerName": "Racer Name",
-  "commentator.race.racerFastestLap": "Fastest Time so far",
-  "commentator.race.racerSlowestLap": "Slowest Time so far",
-  "commentator.race.overallFastestLaps": "Fastest Racer:",
+  "commentator.race.racerFastestLap": "Fastest time so far",
+  "commentator.race.racerSlowestLap": "Slowest time so far",
+  "commentator.race.overallFastestLaps": "Fastest racer:",
   "commentator.race.loading": "Loading resources",
-  "commentator.race.overallSlowestLaps": "Slowest Racer:",
-  "commentator.race.currentLapTime": "Current Lap Time",
-  "commentator.race.timeLeft": "Time Left",
-  "commentator.race.lapCount": "# of Laps ",
-  "commentator.race.invalidLapCount": "Not valid Laps",
+  "commentator.race.overallSlowestLaps": "Slowest racer:",
+  "commentator.race.currentLapTime": "Current lap time",
+  "commentator.race.timeLeft": "Time left",
+  "commentator.race.lapCount": "# of laps ",
+  "commentator.race.invalidLapCount": "Not valid laps",
   "commentator.race.historicalRacerStats": "Stats from previous runs during this event",
-  "commentator.race.historicalRacerStats.header1": "Data from previous",
-  "commentator.race.historicalRacerStats.header2": "runs",
-  "commentator.race.averagelapCount": "Average Laps per Run",
+  "commentator.race.historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
+  "commentator.race.historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
+  "commentator.race.averagelapCount": "Average laps per Run",
   "commentator.race.restSum": "# of Resets",
-  "commentator.race.averageResetsPerLap": "Average Resets per Lap",
+  "commentator.race.averageResetsPerLap": "Average resets per Lap",
 
-  "user-profile.header": "User Settings",
-  "user-profile.header.details": "Account Details",
+  "user-profile.header": "User settings",
+  "user-profile.header.details": "Account details",
   "user-profile.description": "Update your user settings",
   "user-profile.settings.header": "Your account details",
   "user-profile.settings.name": "Name",
   "user-profile.breadcrumb": "User",
   "user-profile.settings.breadcrumb": "Settings",
-  "user-profile.buttons.delete": "Delete Account",
+  "user-profile.buttons.delete": "Delete account",
   "user-profile.modal.button.delete-confirm": "Confirm",
-  "user-profile.modal.header-delete-account": "Delete DREM Account",
+  "user-profile.modal.header-delete-account": "Delete DREM account",
   "user-profile.modal.confirm-delete-account": "Are you sure you wish to delete your DREM account, this action is not reversible?",
   "user-profile.settings.delete.header": "Delete your DREM account",
   "user-profile.settings.changepw.header": "Please complete the form to update your password",
-  "user-profile.buttons.update-password": "Change Password",
-  "user-profile.settings.form.label.current_pw": "Current Password",
+  "user-profile.buttons.update-password": "Change password",
+  "user-profile.settings.form.label.current_pw": "Current password",
   "user-profile.settings.form.label.current_pw.ph": "Enter your password",
-  "user-profile.settings.form.label.new_pw": "New Password",
+  "user-profile.settings.form.label.new_pw": "New password",
   "user-profile.settings.form.label.new_pw.ph": "Enter your new password",
-  "user-profile.settings.form.label.new_pw_conf": "New Password Confirm",
+  "user-profile.settings.form.label.new_pw_conf": "New password confirm",
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
-  "user-profile.settings.form.pw_changed": "Password Successfully Changed",
+  "user-profile.settings.form.pw_changed": "Password successfully changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
   "user-profile.settings.form.pw.error": "New passwords do not match."
 }
